kubernetes/template.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: Dashboard
  labels:
    app: Dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Dashboard
  template:
    metadata:
      labels:
        app: Dashboard
    spec:
      containers:
        - name: Dashboard
          image: username/Dashboard:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: Drive
  labels:
    app: Drive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Drive
  template:
    metadata:
      labels:
        app: Drive
    spec:
      containers:
        - name: Drive
          image: username/Drive:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: Index
  labels:
    app: Index
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Index
  template:
    metadata:
      labels:
        app: Index
    spec:
      containers:
        - name: Index
          image: username/Index:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: VideoProcess
  labels:
    app: VideoProcess
spec:
  replicas: 1
  selector:
    matchLabels:
      app: VideoProcess
  template:
    metadata:
      labels:
        app: VideoProcess
    spec:
      containers:
        - name: VideoProcess
          image: username/VideoProcess:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: Notify
  labels:
    app: Notify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Notify
  template:
    metadata:
      labels:
        app: Notify
    spec:
      containers:
        - name: Notify
          image: username/Notify:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: Dashboard
  labels:
    app: Dashboard
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: Dashboard


---


apiVersion: v1
kind: Service
metadata:
  name: Drive
  labels:
    app: Drive
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: Drive


---


apiVersion: v1
kind: Service
metadata:
  name: Index
  labels:
    app: Index
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: Index


---


apiVersion: v1
kind: Service
metadata:
  name: VideoProcess
  labels:
    app: VideoProcess
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: VideoProcess


---


apiVersion: v1
kind: Service
metadata:
  name: Notify
  labels:
    app: Notify
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: Notify
